added CSS functionality to nick_cage webpage

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <link href="style.css" type="text/css" rel="stylesheet" />
     <head>
         <title>Nick Cage</title>
     </head>
@@ -15,9 +16,11 @@
         </nav>
     </header>
     <main>
+        <article>
         <h2>Who is Nick Cage?</h2>
-        <img src="https://www.placecage.com/c/200/300">
+        <img id ="nick_cage" src="https://www.placecage.com/c/200/300">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </article>
     </main>
     <footer>
         &#169; Nick Cage
