--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <body>
     <header>
         <h1>Nick Cage</h1>
+       <h2><script src="app1.js"></script></h2>
+
+       <h2><script src="app2.js"></script></h2>
         <nav>
             <ul>
                 <li>Fun Facts</li>
@@ -18,6 +21,7 @@
     <main>
         <article>
         <h2>Who is Nick Cage?</h2>
+        <script src="app3.js"></script>
         <img id ="nick_cage" src="https://www.placecage.com/c/200/300">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         </article>
