added operators and loops to webpage

--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
         <img id ="nick_cage" src="https://www.placecage.com/c/200/300">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         </article>
+        <script>imagesOnScreen()</script>
     </main>
     <footer>
+        <script>guessingGame()</script>
         &#169; Nick Cage
     </footer>
 </body>
